added http client

--- a/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Api/appsettings.Development.json
+++ b/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Api/appsettings.Development.json
@@ -13,6 +13,6 @@
     //Docker-Compose
     //"AutoLot": "Server=db;Database=AutoLot;User Id=sa;Password=P@ssw0rd;"
     //Docker
-    "AutoLot": "Server=.,5433;Database=AutoLot;User ID=sa;Password=P@ssw0rd;"
+    "AutoLot": "Server=.,5433;Database=AutoLot50;User ID=sa;Password=P@ssw0rd;"
   }
 }
