--- a/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Mvc/appsettings.Production.json
+++ b/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Mvc/appsettings.Production.json
@@ -8,6 +8,10 @@
   },
   "ConnectionStrings": {
     "AutoLot": "ImNotGoingToTellYou"
+  },
+  "ApiServiceSettings": {
+    "Uri": "https://localhost:5021/",
+    "CarBaseUri": "api/Cars",
+    "MakeBaseUri": "api/Makes"
   }
-
 }
