--- a/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Models/AutoLot.Models.csproj
+++ b/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Models/AutoLot.Models.csproj
@@ -7,8 +7,8 @@
 
 	<ItemGroup>
 		<PackageReference Include="AutoMapper" Version="10.1.1" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="5.0.0-rc.2.20475.6" />
-		<PackageReference Include="System.Text.Json" Version="5.0.0-rc.2.20475.5" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="5.0.0" />
+		<PackageReference Include="System.Text.Json" Version="5.0.0" />
 	</ItemGroup>
 
 </Project>
