--- a/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Mvc/AutoLot.Mvc.csproj
+++ b/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Mvc/AutoLot.Mvc.csproj
@@ -12,10 +12,10 @@
 
 	<ItemGroup>
 		<PackageReference Include="AutoMapper" Version="10.1.1" />
-		<PackageReference Include="LigerShark.WebOptimizer.Core" Version="3.0.279" />
-		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.0-rc.2.20516.1" />
-		<PackageReference Include="System.Text.Json" Version="5.0.0-rc.2.20475.5" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.0-rc.2.20475.6" />
+		<PackageReference Include="LigerShark.WebOptimizer.Core" Version="3.0.295" />
+		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.0" />
+		<PackageReference Include="System.Text.Json" Version="5.0.0" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.0" />
 		<PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.1.113" />
 	</ItemGroup>
 
