--- a/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Web/appsettings.Production.json
+++ b/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Web/appsettings.Production.json
@@ -9,6 +9,11 @@
   },
   "ConnectionStrings": {
     "AutoLot": "ImNotGoingToTellYou"
+  },
+  "ApiServiceSettings": {
+    "Uri": "https://localhost:5021/",
+    "CarBaseUri": "api/Cars",
+    "MakeBaseUri": "api/Makes"
   }
 
 }
