--- a/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Web/appsettings.Staging.json
+++ b/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Web/appsettings.Staging.json
@@ -7,7 +7,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "RebuildDataBase":  false, 
+  "RebuildDataBase": false,
   "ConnectionStrings": {
     //SQL Server Local Db
     //"AutoLot": "Server=(localdb)\\MSSQLLocalDB;Database=AutoLot50;Trusted_Connection=True;"
@@ -15,5 +15,11 @@
     //"AutoLot": "Server=db;Database=AutoLot50;User Id=sa;Password=P@ssw0rd;"
     //Docker
     "AutoLot": "Server=.,5433;Database=AutoLot50;User ID=sa;Password=P@ssw0rd;"
+  },
+  "ApiServiceSettings": {
+    "Uri": "https://localhost:5021/",
+    "CarBaseUri": "api/Cars",
+    "MakeBaseUri": "api/Makes"
   }
+
 }
