--- a/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Api/appsettings.Production.json
+++ b/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Api/appsettings.Production.json
@@ -8,11 +8,6 @@
   },
   "RebuildDataBase": false,
   "ConnectionStrings": {
-    "AutoLot": "It's a Secret"
-  },
-  "ApiServiceSettings": {
-    "Uri": "https://localhost:5021/",
-    "CarBaseUri": "api/Cars",
-    "MakeBaseUri": "api/Makes"
+    "AutoLot": "It's a secret"
   }
 }
