--- a/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Api/appsettings.json
+++ b/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Api/appsettings.json
@@ -1,10 +1,11 @@
 {
   "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+    "MSSqlServer": {
+      "schema": "Logging",
+      "tableName": "SeriLogs",
+      "restrictedToMinimumLevel": "Warning"
     }
   },
+  "ApplicationName": "AutoLot.MVC",
   "AllowedHosts": "*"
 }
