--- a/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Api/appsettings.Development.json
+++ b/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Api/appsettings.Development.json
@@ -1,18 +1,18 @@
 {
   "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+    "MSSqlServer": {
+      "schema": "Logging",
+      "tableName": "SeriLogs",
+      "restrictedToMinimumLevel": "Warning"
     }
   },
-  "RebuildDataBase": false,
+  "RebuildDataBase": true,
   "ConnectionStrings": {
     //SQL Server Local Db
-    //"AutoLot": "Server=(localdb)\\MSSQLLocalDB;Database=AutoLot;Trusted_Connection=True;"
-    //Docker-Compose
-    //"AutoLot": "Server=db;Database=AutoLot;User Id=sa;Password=P@ssw0rd;"
+    //"AutoLot": "Server=(localdb)\\MSSQLLocalDB;Database=AutoLot50;Trusted_Connection=True;"
     //Docker
-    "AutoLot": "Server=.,5433;Database=AutoLot50;User ID=sa;Password=P@ssw0rd;"
+    //"AutoLot": "Server=.,5433;Database=AutoLot50;User ID=sa;Password=P@ssw0rd;",
+    //Docker-Compose
+    "AutoLot": "Server=db;Database=AutoLot50;User ID=sa;Password=P@ssw0rd;"
   }
 }
