--- a/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Mvc/appsettings.Development.json
+++ b/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Mvc/appsettings.Development.json
@@ -1,9 +1,9 @@
 {
   "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+    "MSSqlServer": {
+      "schema": "Logging",
+      "tableName": "SeriLogs",
+      "restrictedToMinimumLevel": "Warning"
     }
   },
   "RebuildDataBase": false,
