don't reload database

--- a/.NETCore/ASP.NETCore/v5.0/AutoLot50/AutoLot.Api/appsettings.Development.json
+++ b/.NETCore/ASP.NETCore/v5.0/AutoLot50/AutoLot.Api/appsettings.Development.json
@@ -6,7 +6,7 @@
       "restrictedToMinimumLevel": "Warning"
     }
   },
-  "RebuildDataBase": true,
+  "RebuildDataBase": false,
   "ConnectionStrings": {
     //SQL Server Local Db
     //"AutoLot": "Server=(localdb)\\MSSQLLocalDB;Database=AutoLot50;Trusted_Connection=True;"
