--- a/.NETCore/ASP.NETCore/v5.0/AutoLot50/AutoLot.Api/appsettings.Development.json
+++ b/.NETCore/ASP.NETCore/v5.0/AutoLot50/AutoLot.Api/appsettings.Development.json
@@ -13,6 +13,6 @@
     //Docker
     //"AutoLot": "Server=.,5433;Database=AutoLot50;User ID=sa;Password=P@ssw0rd;",
     //Docker-Compose
-    "AutoLot": "Server=db;Database=AutoLot50;User ID=sa;Password=P@ssw0rd;"
+    "AutoLot": "Server=db;Database=AutoLotPresentation;User ID=sa;Password=P@ssw0rd;"
   }
 }
