ongoing edits based on the book

--- a/.NETCore/ASP.NETCore/v5.0/AutoLot50/AutoLot.Api/appsettings.json
+++ b/.NETCore/ASP.NETCore/v5.0/AutoLot50/AutoLot.Api/appsettings.json
@@ -6,6 +6,6 @@
       "restrictedToMinimumLevel": "Warning"
     }
   },
-  "ApplicationName": "AutoLot.MVC",
+  "ApplicationName": "AutoLot.Api",
   "AllowedHosts": "*"
 }
