--- a/.NETCore/ASP.NETCore/v5.0/AutoLot50/AutoLot.Services/AutoLot.Services.csproj
+++ b/.NETCore/ASP.NETCore/v5.0/AutoLot50/AutoLot.Services/AutoLot.Services.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <ProjectReference Include="..\AutoLot.Dal\AutoLot.Dal.csproj" />
     <ProjectReference Include="..\AutoLot.Models\AutoLot.Models.csproj" />
   </ItemGroup>
 
