--- a/.NETCore/ASP.NETCore/v5.0/AutoLot50/AutoLot.Api/appsettings.Production.json
+++ b/.NETCore/ASP.NETCore/v5.0/AutoLot50/AutoLot.Api/appsettings.Production.json
@@ -7,6 +7,7 @@
     }
   },
   "RebuildDataBase": false,
+  "ApplicationName": "AutoLot.Api - Prod",
   "ConnectionStrings": {
     "AutoLot": "It's a secret"
   }
