--- a/.NETCore/ASP.NETCore/v5.0/AutoLot50/AutoLot.Mvc/appsettings.Development.json
+++ b/.NETCore/ASP.NETCore/v5.0/AutoLot50/AutoLot.Mvc/appsettings.Development.json
@@ -7,6 +7,7 @@
     }
   },
   "RebuildDataBase": false,
+  "ApplicationName": "AutoLot.Mvc - Dev",
   "ConnectionStrings": {
     //SQL Server Local Db
     //"AutoLot": "Server=(localdb)\\MSSQLLocalDB;Database=AutoLot50;Trusted_Connection=True;"
