--- a/.NETCore/ASP.NETCore/v5.0/AutoLot50/AutoLot.Web/appsettings.Development.json
+++ b/.NETCore/ASP.NETCore/v5.0/AutoLot50/AutoLot.Web/appsettings.Development.json
@@ -14,7 +14,7 @@
     //Docker-Compose
     //"AutoLot": "Server=db;Database=AutoLot50;User Id=sa;Password=P@ssw0rd;"
     //Docker
-    "AutoLot": "Server=.,5433;Database=AutoLot50;User ID=sa;Password=P@ssw0rd;"
+    "AutoLot": "Server=.,5433;Database=AutoLot;User ID=sa;Password=P@ssw0rd;"
   },
   "ApiServiceSettings": {
     "Uri": "https://localhost:5021/",
