--- a/.NETCore/ASP.NETCore/v5.0/AutoLot50/AutoLot.Dal.Tests/AutoLot.Dal.Tests.csproj
+++ b/.NETCore/ASP.NETCore/v5.0/AutoLot50/AutoLot.Dal.Tests/AutoLot.Dal.Tests.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="5.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
