--- a/.NETCore/ASP.NETCore/v5.0/Japikse_VersioningAPIs/FolderVersioning/FolderVersioning.csproj
+++ b/.NETCore/ASP.NETCore/v5.0/Japikse_VersioningAPIs/FolderVersioning/FolderVersioning.csproj
@@ -1,11 +1,11 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
-    <PropertyGroup>
-        <TargetFramework>net5.0</TargetFramework>
+  <PropertyGroup>
+    <TargetFramework>net5.0</TargetFramework>
         <GenerateDocumentationFile>True</GenerateDocumentationFile>
-    </PropertyGroup>
+  </PropertyGroup>
 
-    <ItemGroup>
+  <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.0.0" />
         <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.2.1" />
@@ -13,6 +13,6 @@
         <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.2.1" />
         <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.2.1" />
         <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.2.1" />
-    </ItemGroup>
+  </ItemGroup>
 
 </Project>
