--- a/.NETCore/ASP.NETCore/v6.0/Japikse_VersioningAPIs/FullSwaggerSupport/FullSwaggerSupport.csproj
+++ b/.NETCore/ASP.NETCore/v6.0/Japikse_VersioningAPIs/FullSwaggerSupport/FullSwaggerSupport.csproj
@@ -20,5 +20,10 @@
 		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.2.3" />
 		<PackageReference Include="System.Text.Json" Version="6.0.0-rc.2.21480.5" />
 	</ItemGroup>
+	<ItemGroup>
+	  <None Update="FullSwaggerSupport.xml">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
+	</ItemGroup>
 
 </Project>
