tweaked presentation code

--- a/.NETCore/ASP.NETCore/v6.0/AutoLot/AutoLot.Mvc/appsettings.Production.json
+++ b/.NETCore/ASP.NETCore/v6.0/AutoLot/AutoLot.Mvc/appsettings.Production.json
@@ -24,7 +24,7 @@
   "RebuildDataBase": false,
   "UseApi": false,
   "ApiServiceSettings": {
-    "Uri": "https://localhost:5011/",
+    "Uri": "https://myserver.com/api",
     "UserName": "AutoLotUser",
     "Password": "SecretPassword",
     "CarBaseUri": "api/v1/Cars",
