updated for SDD

--- a/.NETCore/ASP.NETCore/v6.0/AutoLot/AutoLot.Mvc/appsettings.Development.json
+++ b/.NETCore/ASP.NETCore/v6.0/AutoLot/AutoLot.Mvc/appsettings.Development.json
@@ -21,8 +21,8 @@
     //Docker
     "AutoLot": "Server=.,5433;Database=AutoLotTest;User ID=sa;Password=P@ssw0rd;"
   },
-  "RebuildDataBase": true,
-  "UseApi": false,
+  "RebuildDataBase": false,
+  "UseApi": true,
   "ApiServiceSettings": {
     "Uri": "https://localhost:5011/",
     "UserName": "AutoLotUser",
