--- a/.NETCore/ASP.NETCore/v6.0/AutoLot/AutoLot.Web/appsettings.Development.json
+++ b/.NETCore/ASP.NETCore/v6.0/AutoLot/AutoLot.Web/appsettings.Development.json
@@ -22,7 +22,7 @@
     "AutoLot": "Server=.,5433;Database=AutoLotTest;User ID=sa;Password=P@ssw0rd;"
   },
   "RebuildDataBase": false,
-  "UseApi": false,
+  "UseApi": true,
   "ApiServiceSettings": {
     "Uri": "https://localhost:5011/",
     "UserName": "AutoLotUser",
