updated packages for autolot

--- a/.NETCore/ASP.NETCore/v6.0/AutoLot/AutoLot.Web/appsettings.Development.json
+++ b/.NETCore/ASP.NETCore/v6.0/AutoLot/AutoLot.Web/appsettings.Development.json
@@ -17,12 +17,12 @@
   },
   "ConnectionStrings": {
     //SQL Server Local Db
-    //"AutoLot": "Server=(localdb)\\MSSQLLocalDB;Database=AutoLot;Trusted_Connection=True;"
+    "AutoLot": "Server=(localdb)\\MSSQLLocalDB;Database=AutoLot_Demo;Trusted_Connection=True;"
     //Docker
-    "AutoLot": "Server=.,5433;Database=AutoLotTest;User ID=sa;Password=P@ssw0rd;"
+    //"AutoLot": "Server=.,5433;Database=AutoLot_Demo;User ID=sa;Password=P@ssw0rd;"
   },
-  "RebuildDataBase": false,
-  "UseApi": true,
+  "RebuildDataBase": true,
+  "UseApi": false,
   "ApiServiceSettings": {
     "Uri": "https://localhost:5011/",
     "UserName": "AutoLotUser",
