--- a/.NETCore/ASP.NETCore/v7.0/Japikse_VersioningAPIs/FullSwaggerSupport/Properties/launchSettings.json
+++ b/.NETCore/ASP.NETCore/v7.0/Japikse_VersioningAPIs/FullSwaggerSupport/Properties/launchSettings.json
@@ -16,7 +16,7 @@
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7273;http://localhost:5252",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
         "REBUILD_ON_RUDE_EDIT_ALWAYS": "True"
       }
     },
