probably fixed the bug introduced in redmond

--- a/.NETCore/ASP.NETCore/v7.0/AutoLot/AutoLot.Api/appsettings.Production.json
+++ b/.NETCore/ASP.NETCore/v7.0/AutoLot/AutoLot.Api/appsettings.Production.json
@@ -6,8 +6,8 @@
       "ConnectionStringName": "AutoLot"
     },
     "File": {
-      "Drive": "c",
-      "FilePath": "temp",
+      "Drive": "d",
+      "FilePath": "local",
       "FileName": "log_AutoLot.txt"
     },
     "General": {
