--- a/.NETCore/ASP.NETCore/v7.0/AutoLot/AutoLot.Mvc/AutoLot.Mvc.csproj
+++ b/.NETCore/ASP.NETCore/v7.0/AutoLot/AutoLot.Mvc/AutoLot.Mvc.csproj
@@ -23,6 +23,12 @@
 		<PackageReference Include="System.Text.Json" Version="7.0.3" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Content Update="appsettings.json">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </Content>
+	</ItemGroup>
+
 	<PropertyGroup>
 		<TargetFramework>net7.0</TargetFramework>
 		<Nullable>disable</Nullable>
