--- a/.NETCore/ASP.NETCore/v8.0/Japikse_VersioningAPIs/FolderVersioning/FolderVersioning.csproj
+++ b/.NETCore/ASP.NETCore/v8.0/Japikse_VersioningAPIs/FolderVersioning/FolderVersioning.csproj
@@ -1,29 +1,24 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<PropertyGroup>
-		<TargetFramework>net7.0</TargetFramework>
+		<TargetFramework>net8.0</TargetFramework>
 		<Nullable>disable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-		<DocumentationFile>FullSwaggerSupport.xml</DocumentationFile>
+		<DocumentationFile>FolderVersioning.xml</DocumentationFile>
 		<NoWarn>1701;1702;1591;1573</NoWarn>
 	</PropertyGroup>
+
 	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.1.0" />
-		<PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.1.0" />
-		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="[7.0.*,8.0)" />
+		<PackageReference Include="Asp.Versioning.Mvc" Version="7.1.0" />
+		<PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="7.1.0" />
+		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="[8.0.*-*,9.0)" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.5.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.5.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.5.0" />
-		<PackageReference Include="System.Text.Json" Version="[7.0.*,8.0)" />
+		<PackageReference Include="System.Text.Json" Version="[8.0.*-*,9.0)" />
 	</ItemGroup>
-	<ItemGroup>
-	  <None Update="FullSwaggerSupport.xml">
-	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-	  </None>
-	</ItemGroup>
-
 </Project>
