updates from demo

--- a/.NETCore/ASP.NETCore/MVC/v8.0/AutoLot.Mvc/appsettings.Development.json
+++ b/.NETCore/ASP.NETCore/MVC/v8.0/AutoLot.Mvc/appsettings.Development.json
@@ -15,14 +15,14 @@
     }
   },
   "AppName": "AutoLot.Mvc - Dev",
-  "RebuildDataBase": true,
+  "RebuildDataBase": false,
   "ConnectionStrings": {
     //SQL Server Local Db
     "AutoLot": "Server=(localdb)\\MSSQLLocalDB;Database=AutoLot_MVC;Trusted_Connection=True;"
     //"AutoLot": "Server=(localdb)\\ProjectModels;Database=AutoLot_Hol;Trusted_Connection=True;"
   },
   "DealerInfo": {
-    "DealerName": "Skimedic's Used Cars Development Site",
+    "DealerName": "Skimedic's Used Cars Dev Site",
     "City": "West Chester",
     "State": "Ohio"
   }
