--- a/DOTNETCore/ASP.NETCore/Japikse_VersioningAPIs/v8.0/BareMinimum/BareMinimum.csproj
+++ b/DOTNETCore/ASP.NETCore/Japikse_VersioningAPIs/v8.0/BareMinimum/BareMinimum.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Asp.Versioning.Mvc" Version="7.1.0" />
-    <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="7.1.0" />
+    <PackageReference Include="Asp.Versioning.Mvc" Version="[8.0.*-*,9.0)" />
+    <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="[8.0.*-*,9.0)" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="[8.0.*-*,9.0)" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
