--- a/DOTNETCore/ASP.NETCore/Japikse_VersioningAPIs/v9.0/FullSwaggerSupport/FullSwaggerSupport.csproj
+++ b/DOTNETCore/ASP.NETCore/Japikse_VersioningAPIs/v9.0/FullSwaggerSupport/FullSwaggerSupport.csproj
@@ -10,8 +10,8 @@
 		<NoWarn>1701;1702;1591;1573</NoWarn>
 	</PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="Asp.Versioning.Mvc" Version="8.1.0" />
-		<PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="8.1.0" />
+		<PackageReference Include="Asp.Versioning.Mvc" Version="[8.*,10.0)" />
+		<PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="[8.*,10.0)" />
 		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="[9.0.*,10.0)" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="[7.*,8.0)" />
 		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="[7.*,8.0)" />
